--- a/html/user_config.ini
+++ b/html/user_config.ini
@@ -1,5 +1,5 @@
 [main]
-dst_emails = 
-vt_api_key = 
-blacklist = 1.1.1.1
-whitelist = 2.2.2.2
+dst_emails = ""
+vt_api_key = ""
+blacklist = ""
+whitelist = ""
