New feature successfully implemented. New template objects were created for host and account breach based alerts.

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,11 @@
 [main]
 iface = $IFACE$
 
-[virustotal]
+[api_urls]
 vt_api_domain_url = https://www.virustotal.com/vtapi/v2/domain/report
 vt_api_ip_url = http://www.virustotal.com/vtapi/v2/ip-address/report
 vt_api_file_url = https://www.virustotal.com/vtapi/v2/file/report
+hibp_api_url = https://haveibeenpwned.com/api/v2/breachedaccount/
 
 [blacklists_ip]
 Malware = http://malc0de.com/bl/IP_Blacklist.txt,https://sslbl.abuse.ch/blacklist/sslipblacklist.csv,http://rules.emergingthreats.net/blockrules/emerging-dshield.rules,https://ransomwaretracker.abuse.ch/downloads/RW_IPBL.txt
