homenet.bad_ips does not have the right structure from objects

--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,9 @@ vt_api_file_url = https://www.virustotal.com/vtapi/v2/file/report
 hibp_api_url = https://haveibeenpwned.com/api/v2/breachedaccount/
 
 [blacklists_ip]
-Malware = http://malc0de.com/bl/IP_Blacklist.txt,https://sslbl.abuse.ch/blacklist/sslipblacklist.csv,http://rules.emergingthreats.net/blockrules/emerging-dshield.rules,https://ransomwaretracker.abuse.ch/downloads/RW_IPBL.txt
+Malware = http://malc0de.com/bl/IP_Blacklist.txt,https://sslbl.abuse.ch/blacklist/sslipblacklist.csv,http://rules.emergingthreats.net/blockrules/emerging-dshield.rules
+
+Ransomeware = https://ransomwaretracker.abuse.ch/downloads/RW_IPBL.txt
 
 Botnet = http://rules.emergingthreats.net/blockrules/emerging-botcc.rules
 
