--- a/install/Raspbian/requirements.txt
+++ b/install/Raspbian/requirements.txt
@@ -4,6 +4,7 @@ Jinja2==2.8
 MarkupSafe==0.23
 netaddr==0.7.12
 netifaces==0.10.4
+python-libnmap==0.7.0
 requests==2.4.3
 sh==1.11
 ua-parser==0.7.2
